feat: Integrate Gemini AI for ban appeal analysis
Adds Gemini AI integration to the admin dashboard to analyze ban appeals. This includes updating dependencies, incorporating the Google GenAI SDK, and enhancing the `AdminDashboard` component to send appeal details to the AI model for analysis.

The AI analysis leverages the `gemini-3-pro-preview` model and provides a concise verdict on the appeal's honesty and remorse. Error handling for AI analysis has also been implemented.

Additionally, this commit refactors Firestore imports to use modular paths consistently across the application and refines UI elements for background ambience and error messages.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "firebase": "^10.8.0"
+    "firebase": "^10.8.0",
+    "@google/genai": "^1.39.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
